--- a/viz_project_web/index.html
+++ b/viz_project_web/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Edited on 13/11/2016
+	Edited on 13/11/2016 by Yingshu CHEN
 -->
 <html>
 	<head>
@@ -26,9 +26,9 @@
 		<!-- Header Wrapper -->
 		<!-- Header -->
 				<div id="header">
-					<div class="container">							
+					<div class="container">
 						<!-- Logo -->
-							<h1><a href="#" id="logo"></a></h1>						
+							<h1><a href="#" id="logo"></a></h1>
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
@@ -42,12 +42,12 @@
 									<li><a href="#footer" class="smoothScroll">Contact Us</a></li>
 								</ul>
 							</nav>
-	
+
 					</div>
 				</div>
 
-			<div class="wrapper style1">	
-				
+			<div class="wrapper style1">
+
 			<!-- Banner -->
 				<div id="banner">
 					<section class="container">
@@ -58,7 +58,7 @@
 				</div>
 
 			</div>
-		
+
 		<!-- Section One -->
 			<div class="wrapper style2" id= "section1">
 				<section class="container">
@@ -72,9 +72,9 @@
 							<p>The project objective is to analyze why the released movies were popular or not and predict the box office/popularity of the coming movies with reasons through analyzing and visualizing movie data in the past decades such as ranking, actors/actresses, directors, movie keywords and box office etc. To analyze the international movie trend, it is required to analyze and visualize the data such as movie genre, cast, audience preference and related box office etc. The whole process helps us to make prediction for the popularity of the coming movies.
 							</p>
 						</div>
-						<div class="6u">							
+						<div class="6u">
 							<p>
-							The project covers a pretty wide range of movie data, top movies and genres, several movie awards and related attributes like country, gender, genres, movie cast of recent years, movie box office and movie related words such as title, plot keywords, etc. All data were derived from network database or statistic, like imdb, the numbers, boxofficemojo, etc. and we download raw data from their database or extract data by programs. 
+							The project covers a pretty wide range of movie data, top movies and genres, several movie awards and related attributes like country, gender, genres, movie cast of recent years, movie box office and movie related words such as title, plot keywords, etc. All data were derived from network database or statistic, like imdb, the numbers, boxofficemojo, etc. and we download raw data from their database or extract data by programs.
 							All data were processed into different specified formats according to visualization tools, for instance, Tableau, JavaScript (Highcharts, d3), Gephi, Cloud Word, etc. A number of visualization methods are used to better present meanings and discover new insights, pie charts, line charts, bar charts, treemaps, maps, bubbles, pyramid, tag cloud and so on and so forth.
 							</p>
 							<p>
@@ -87,7 +87,7 @@
 
 		<!-- Section Two -->
 			<div class="wrapper style3" id = "section2">
-				<section class="container">		
+				<section class="container">
 					<div class="row double">
 					<div class="8u">
 						<img src="images/section2/index_logo.gif" width="100%">
@@ -122,7 +122,7 @@
 									</center>
 								</li>
 							</ul>
-						</div>	
+						</div>
 						<div class="4u">
 							<ul class="special-icons">
 								<li>
@@ -133,7 +133,7 @@
 									</center>
 								</li>
 							</ul>
-						</div>	
+						</div>
 						<div class="4u">
 							<ul class="special-icons">
 								<li>
@@ -145,11 +145,11 @@
 									</center>
 								</li>
 							</ul>
-						</div>						
+						</div>
 					</div>
 				</section>
 			</div>
-		
+
 		<!-- Section Four -->
 			<div class="wrapper style3" id = "section4">
 				<section class="container">
@@ -160,7 +160,7 @@
 
 					<iframe src="section4_slide.htm" width="100%" height="500px"></iframe>
 
-					<a href="section4.html" class="button alt">See Details >></a>					
+					<a href="section4.html" class="button alt">See Details >></a>
 				</section>
 			</div>
 
@@ -169,11 +169,11 @@
 				<section class="container">
 					<div class="row double">
 						<div class="6u">
-							<h3>Star Cooperation</h3>						
+							<h3>Star Cooperation</h3>
 							<img width="100%" src="images/section5/matrix.png">
 						</div>
-						<div class="6u">							
-							<h3>Movie Keywords</h3>	
+						<div class="6u">
+							<h3>Movie Keywords</h3>
 							<img width="100%" src="images/section5/tagcloud8.png">
 							<center>
 							<a href="section5.html" class="button">See Details >></a>
@@ -198,7 +198,7 @@
 		<div id="footer">
 			<section id="team" class="container">
 				<header class="major">
-					<h2>Connect with us</h2>					
+					<h2>Connect with us</h2>
 				</header>
 				<div class="row">
 						<div class="3u">
@@ -225,9 +225,9 @@
 				<hr />
 				<!-- Copyright -->
 				<div id="copyright">
-					Made By Group Se7en @COMP7507 Visualization and visual analytics 
+					Made By Group Se7en @COMP7507 Visualization and visual analytics
 				</div>
-			</section>			
+			</section>
 		</div>
 
 	</body>
