--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 	<head>
-		<title>Yingshu (Susan) CHEN | 陈颖舒 </title>
+		<title>Yingshu CHEN (Susan) | 陈颖舒 </title>
 		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta content="chenyingshu Yingshu Chen Susan HKUST" name="keywords">
+		<meta content="Susan's Personal Webpage" name="description">
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
 	</head>
 
-	<body lang="en">
+	<body>
 		<header>
 			<div class="avator-counter">
 				<img class="avator" src="./images/cys.jpg">
 			</div>
 
 			<div class="info-counter">
-				<h1>Yingshu (Susan) CHEN <span lang="cn">陈颖舒</span></h1>
+				<h1>Yingshu CHEN (Susan) <span lang="cn">陈颖舒</span></h1>
 				<p><b>E-MAIL</b>：yingshu2008[AT]gmail[DOT]com </p>
 				<p><b>LINKEDIN</b>：<a href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank">https://cn.linkedin.com/in/yingshu-chen-a0550aa7</a></p>
 				<h5 class="info-text">Yingshu CHEN is currently a PhD student in the Department of Computer Science and Engineering, the Hong Kong University of Science and Technology (HKUST).
 					Her research interests cover computer vision and computer graphics for computational design such as 2D and 3D style transfer.
-					Yingshu received her Bachelor of Engineer in Digital Media Technology from Zhejiang University in 2016 and Master of Science in Computer Science from The University of Hong Kong in 2018.</h5>
+					Yingshu received her Bachelor of Engineering in Digital Media Technology from Zhejiang University in 2016 and Master of Science in Computer Science from The University of Hong Kong in 2018.</h5>
 			</div>
 		</header>
 
