--- a/cv_cys.html
+++ b/cv_cys.html
@@ -4,6 +4,9 @@
 <head>
     <title>Yingshu CHEN (Susan) | CHEN, Yingshu</title>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="chenyingshu Yingshu Chen Susan HKUST" name="keywords">
+    <meta content="Susan's Personal Webpage - Resume" name="description">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
