--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 						<span>
 							<a href="https://chenyingshu.github.io/time_of_day/assets/ICCP_2022_paper.pdf" target="_blank">[Paper]</a>
 							<a href="https://chenyingshu.github.io/time_of_day/" target="_blank">[Project]</a>
+							<a href="https://arxiv.org/abs/2209.05800" target="_blank">[Arxiv]</a>
 							<a href="https://github.com/hkust-vgd/architectural_style_transfer" target="_blank">[Code]</a>
 						</span>
 
