--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<p><b>LINKEDIN</b>：<a href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank">https://cn.linkedin.com/in/yingshu-chen-a0550aa7</a></p>
 				<h5 class="info-text">Yingshu CHEN is currently a PhD student in the Department of Computer Science and Engineering, the Hong Kong University of Science and Technology (HKUST).
 					Her research interests cover computer vision and computer graphics for computational design such as 2D and 3D style transfer.
-					Yingshu received her Bachelor of Engineering in Digital Media Technology from Zhejiang University in 2016 and Master of Science in Computer Science from The University of Hong Kong in 2018.</h5>
+					Yingshu received her B.Eng in Digital Media Technology from Zhejiang University in 2016 and M.Sc in Computer Science from The University of Hong Kong in 2018.</h5>
 			</div>
 		</header>
 
@@ -30,10 +30,12 @@
 
 			<div class="sub-container">
 				<h1>EXPERIENCE</h1>
-				<p>August 2019 to now, PhD student in Department of Computer Science and Engineering, HKUST</p>
-				<p>July 2019 to August 2019, research assistant of Division of Integrative Systems and Design, HKUST</p>
-				<p>April 2018 to June 2019, analytics programmer in Aigens, F&B self-service kiosk company | client-end kiosk</p>
-				<p>October 2017, Centre for Educational Leadership (CEL) Gansu Professional Training, Faculty of Education in HKU | Activity Helper and Cantonese-Putonghua Interpreter</p>
+				<div class="sub-text-container">
+					<p>August 2019 to now, PhD student in Department of Computer Science and Engineering, HKUST</p>
+					<p>July 2019 to August 2019, research assistant of Division of Integrative Systems and Design, HKUST</p>
+					<p>April 2018 to June 2019, analytics programmer in Aigens, F&B self-service kiosk company | client-end kiosk</p>
+					<p>October 2017, Centre for Educational Leadership (CEL) Gansu Professional Training, Faculty of Education in HKU | Activity Helper and Cantonese-Putonghua Interpreter</p>
+				</div>
 			</div>
 
 
@@ -55,14 +57,14 @@
 							we aim to synthesize a new image of the same space with desired furnishing and decorations. </small></p>
 					</div>
 				</div>
-				<div class="publication-container">
+				<div class="publication-container sub-text-container">
 					<div class="thumbnail-counter">
 						<img class="thumbnail" src="images/paper/thumbnail_iccp2022.png">
 					</div>
 					<div class="paper-info-counter">
 						<p><b>Time-of-Day Neural Style Transfer for Architectural Photographs</b> </p>
 						<p><i><b>Yingshu Chen</b></i>, Tuan-Anh Vu, Ka-Chun Shum, Binh-Son Hua, Sai-Kit Yeung
-							<br> International Conference on Computational Photography (ICCP) 2022 (Oral). </p>
+							<br> International Conference on Computational Photography (ICCP) 2022. </p>
 						<span>
 							<a href="https://chenyingshu.github.io/time_of_day/assets/ICCP_2022_paper.pdf" target="_blank">[Paper]</a>
 							<a href="https://chenyingshu.github.io/time_of_day/" target="_blank">[Project]</a>
@@ -74,25 +76,49 @@
 							and transfer sufficient styles for foreground while keeping foreground geometry intact.</small></p>
 					</div>
 				</div>
+
+				<h1>PREPRINTS</h1>
+				<div class="publication-container sub-text-container">
+					<div class="thumbnail-counter">
+						<img class="thumbnail" src="images/paper/thumbnail_360roam2022.png">
+					</div>
+					<div class="paper-info-counter">
+						<p><b>360Roam: Real-Time Indoor Roaming Using Geometry-Aware 360ᵒ Radiance Fields</b> </p>
+						<p>Huajian Huang, <i><b>Yingshu Chen</b></i>, Tianjian Zhang, Sai-Kit Yeung
+<!--							<br> SIGGRAPH Asia 2022 Technical Communications (to appear).-->
+						</p>
+						<span>
+<!--							<a href="#" target="_blank">[Paper]</a>-->
+							<a href="https://huajianup.github.io/research/360Roam/" target="_blank">[Project]</a>
+							<a href="https://arxiv.org/abs/2208.02705" target="_blank">[Arxiv]</a>
+<!--							<a href="#" target="_blank">[Data]</a>-->
+						</span>
+						<p class="abstract"><small><i>360Roam</i> is a novel scene-level NeRF system that can synthesize novel views of large-scale indoor scenes and support real-time indoor roaming.</small></p>
+					</div>
+				</div>
 			</div>
 
 
 			<div class="sub-container">
 				<h1>PROJECTS</h1>
-				<p><a href="https://github.com/chenyingshu/Traveling-Website-SRTP" target="_blank">Original Design of Websites with Interaction Visualization</a>: UG Student Research Training Program (SRTP)</p>
-				<p><a href="https://vimeo.com/260713934" target="_blank">Design and Method Study of Two-handed Natural Interactive Scene Modeling Applied on Virtual Reality</a> (Unity with C#):</p>
-				&nbsp;&nbsp;&nbsp;&nbsp;<small>- Free hand gesture control for simple modeling with Leap Motion.</small><br>
-				<p><a href="https://chenyingshu.github.io/MovieTrendFromDataVisualization/" target="_blank">Movie Trend Visualization</a>: responsible for data collection, overall design, top movie visualization and analysis, webpage design.</p>
-				<p><a href="https://github.com/chenyingshu/ThinkTypeSystem" target="_blank">Human Computer Interaction via Brainwave Control</a> (C++ and Qt): <a href="https://vimeo.com/243664058" target="_blank">Demo Video</a></p>
-				&nbsp;&nbsp;&nbsp;&nbsp;<small>- Study the effect of user interface (UI) elements and human-induced factors on electroencephalography (EEG) signals,
-				proposing a brain-computer interface (BCI) typing system through EEG data retrieved from the wireless Emotiv neuroheadset.</small><br>
-				<p><a href="./ad-transfer" target="_blank">3D Advertisement Poster</a> (WebGL): A web-based demo for 3D advertisment display. </p>
+				<div class="sub-text-container">
+					<p><a href="https://github.com/chenyingshu/Traveling-Website-SRTP" target="_blank">Original Design of Websites with Interaction Visualization</a>: UG Student Research Training Program (SRTP)</p>
+					<p><a href="https://vimeo.com/260713934" target="_blank">Design and Method Study of Two-handed Natural Interactive Scene Modeling Applied on Virtual Reality</a> (Unity with C#):</p>
+					&nbsp;&nbsp;&nbsp;&nbsp;<small>- Free hand gesture control for simple modeling with Leap Motion.</small><br>
+					<p><a href="https://chenyingshu.github.io/MovieTrendFromDataVisualization/" target="_blank">Movie Trend Visualization</a>: responsible for data collection, overall design, top movie visualization and analysis, webpage design.</p>
+					<p><a href="https://github.com/chenyingshu/ThinkTypeSystem" target="_blank">Human Computer Interaction via Brainwave Control</a> (C++ and Qt): <a href="https://vimeo.com/243664058" target="_blank">Demo Video</a></p>
+					&nbsp;&nbsp;&nbsp;&nbsp;<small>- Study the effect of user interface (UI) elements and human-induced factors on electroencephalography (EEG) signals,
+					proposing a brain-computer interface (BCI) typing system through EEG data retrieved from the wireless Emotiv neuroheadset.</small><br>
+					<p><a href="./ad-transfer" target="_blank">3D Advertisement Poster</a> (WebGL): A web-based demo for 3D advertisment display. </p>
+				</div>
 			</div>
 
 			<div class="sub-container">
 				<h1>OTHER REFERENCES</h1>
-<!--				<p><a href="https://yschen.site/my_works">My Works</a></p>-->
-				<p><a class="none-decoration" href="./cv_cys.html" target="_blank">Full CV</a></p>
+				<div class="sub-text-container">
+	<!--				<--<p><a href="https://yschen.site/my_works">My Works</a></p>-->
+					<p><a class="none-decoration" href="./cv_cys.html" target="_blank">Full CV</a></p>
+				</div>
 			</div>
 
 		</section>
