add ieee, update cv

--- a/cv_cys.html
+++ b/cv_cys.html
@@ -52,8 +52,8 @@
         <p>Cantonese, Mandarin, English</p>
 
         <p><strong>Computer</strong></p>
-        <p>Photoshop | Maya | Unity | Qt | C/C++ -- National Computer Rank Examination - Level 2 Excellent（C language）|
-            C# | Java | Python, etc. </p>
+        <p> Python | MATLAB |  C# | Java |  | C/C++ -- National Computer Rank Examination - Level 2 Excellent（C language）|
+            Qt | Photoshop | Maya | Blender | Unity | Unreal, etc. </p>
         <p></p>Web programming: HTML，CSS，JavaScript, TypeScript |Android app development</p>
 
         <p><strong>Other Skills</strong></p>
@@ -74,9 +74,12 @@
         <p><a href="https://vimeo.com/260713934">Bachelor Thesis Topic</a> (Unity with C#)</p>
         &nbsp;&nbsp;&nbsp;&nbsp;<small>-Design and Method Study of Two-handed Natural Interactive Scene Modeling Applied on Virtual Reality </small><br>
 
+        <p>2014-2015 Zhejiang University Student Research Training Program (<a href="https://github.com/chenyingshu/Traveling-Website-SRTP">SRTP</a>) titled “Original design of websites with Interaction visualization” | Person in charge and team leader</p>
+        &nbsp;&nbsp;&nbsp;&nbsp;<small>-It is a one-year academic project for undergraduates. I held every team meetings and supervised the progress. We made periodical schemes and study schedules, determining project orientation.</small><br>
+
         <p>Amazon Recommendation Cloud Computing in Spark – responsible for algorithms selection and realization</p>
 
-        <p>Mobile Game APP Development – responsible for algorithm refinement and UI design</p>
+        <p><a href="https://vimeo.com/194161874">Mobile Game APP Development</a> – responsible for algorithm refinement and UI design</p>
 
         <p><a href="https://github.com/chenyingshu/MovieTrendFromDataVisualization">Movie Trend Visualization</a> – responsible for data collection, overall design, top movie visualization and analysis, webpage design.</p>
 
@@ -86,12 +89,9 @@
 
 
     <div class="sub-container">
-        <h1>SOCIETY PRACTICES / RESEARCHES / TRAINING </h1>
+        <h1>SOCIETY PRACTICES / TRAINING </h1>
         <p>Year 2013 and 2014 ”Return visit to alma mater” | Zhejiang University | Charged in advertising | Colonel third and second prizes respectively<p>
         &nbsp;&nbsp;&nbsp;&nbsp;<small>-Mainly in charge of activities propagation including on and off line and final report layout design.</small><br>
-
-        <p>2014-2015 Zhejiang University Student Research Training Program (<a href="https://github.com/chenyingshu/Traveling-Website-SRTP">SRTP</a>) titled “Original design of websites with Interaction visualization” | Person in charge and team leader</p>
-        &nbsp;&nbsp;&nbsp;&nbsp;<small>-It is a one-year academic project for undergraduates. I held every team meetings and supervised the progress. We made periodical schemes and study schedules, determining project orientation.</small><br>
 
         <p>Year 2015 social practice “Technical lectures marching on community” on winter holiday | Team leader</p>
         &nbsp;&nbsp;&nbsp;&nbsp;<small>-Distribution of tasks including propagation, community contact, news report, etc.</small><br>
