--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<h1>Yingshu CHEN (Susan) <span lang="cn">陈颖舒</span></h1>
 				<p><b>E-MAIL</b>：yingshu2008[AT]gmail[DOT]com </p>
 				<p><b>LINKEDIN</b>：<a href="https://cn.linkedin.com/in/yingshu-chen-a0550aa7" target="_blank">https://cn.linkedin.com/in/yingshu-chen-a0550aa7</a></p>
-				<h5 class="info-text">Yingshu CHEN is currently a PhD candidate in the Department of Computer Science and Engineering, the Hong Kong University of Science and Technology (HKUST) supervised by Sai-Kit Yeung and .
+				<h5 class="info-text">Yingshu CHEN is currently a PhD candidate in the Department of Computer Science and Engineering, the Hong Kong University of Science and Technology (HKUST) supervised by Sai-Kit Yeung and Ajay Joneja.
 					Her research interests cover computer vision and computer graphics for computational design such as 2D and 3D style transfer.
 					Yingshu received her B.Eng in Digital Media Technology from Zhejiang University in 2016 and M.Sc in Computer Science from The University of Hong Kong in 2018.</h5>
 			</div>
@@ -50,6 +50,8 @@
 						<p>Hong Wing Pang, <i><b>Yingshu Chen</b></i>, Phuoc-Hieu T. Le, Binh-Son Hua, Thanh Nguyen, Sai-Kit Yeung
 							<br> European Conference on Computer Vision (ECCV) 2022. </p>
 						<span>
+							<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136830137.pdf" target="_blank">[Paper]</a>
+							<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136830137-supp.pdf" target="_blank">[Supp]</a>
 							<a href="https://arxiv.org/abs/2108.01806" target="_blank">[Arxiv]</a>
 							<a href="https://github.com/hkust-vgd/neural_scene_decoration" target="_blank">[Code]</a>
 						</span>
@@ -67,11 +69,11 @@
 							<br> International Conference on Computational Photography (ICCP) 2022. </p>
 						<span>
 							<a href="https://chenyingshu.github.io/time_of_day/assets/ICCP_2022_paper.pdf" target="_blank">[Paper]</a>
-							<a href="https://ieeexplore.ieee.org/document/9887763/" target="_blank">[IEEE]</a>
 							<a href="https://chenyingshu.github.io/time_of_day/" target="_blank">[Project]</a>
 							<a href="https://arxiv.org/abs/2209.05800" target="_blank">[Arxiv]</a>
 							<a href="https://github.com/hkust-vgd/architectural_style_transfer" target="_blank">[Code]</a>
 							<a href="https://github.com/hkust-vgd/architectural_style_transfer#dataset" target="_blank">[Data]</a>
+							<a href="https://ieeexplore.ieee.org/document/9887763/" target="_blank">[IEEE]</a>
 						</span>
 
 						<p class="abstract"><small>Architectural Photography Style Transfer aims to transfer background dynamic texture and chrominance,
