add working exp

--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<section class="container">
 
 			<div class="sub-container">
-				<h1>EXPERIENCE</h1>
+				<h1>EDUCATION AND WORKING EXPERIENCE</h1>
 				<div class="sub-text-container">
-					<p>August 2019 to now, PhD student in Department of Computer Science and Engineering, HKUST</p>
-					<p>July 2019 to August 2019, research assistant of Division of Integrative Systems and Design, HKUST</p>
-					<p>April 2018 to June 2019, analytics programmer in Aigens, F&B self-service kiosk company | client-end kiosk</p>
-					<p>October 2017, Centre for Educational Leadership (CEL) Gansu Professional Training, Faculty of Education in HKU | Activity Helper and Cantonese-Putonghua Interpreter</p>
+					<p>August 2019 - Now, PhD student in Department of Computer Science and Engineering, HKUST</p>
+					<p>Summer 2019, Research Assistant of Division of Integrative Systems and Design, HKUST</p>
+					<p>2018 – 2019, Analytics Programmer,  Aigens Limited Technology (Hong Kong)</p>
+					<p>October 2017, Activity Helper and Cantonese-Putonghua Interpreter, Centre for Educational Leadership (CEL) Gansu Professional Training, Faculty of Education in HKU</p>
+					<p>2016 – 2018, Master of Science in Computer Science, The University of Hong Kong</p>
+					<p>2012 – 2016, Bachelor of Engineering in Digital Media Technology, Zhejiang University</p>
 				</div>
 			</div>
 
