--- a/cv_cys.html
+++ b/cv_cys.html
@@ -45,6 +45,18 @@
         <p>August 2019 to now, PhD student in Department of Computer Science and Engineering, HKUST</p>
 <!--        <p>2021 to now, PhD student in Thrust of Computational Media and Arts, HKUST (GZ)</p>-->
     </div>
+    <div class="sub-container">
+        <h1>TEACHING SERVICES</h1> 
+        <!-- <p>, Teaching Assistance of ,  HKUST</p> -->
+        <p>Spring 2023, Teaching Assistance of COMP 4021 Internet Computing, HKUST</p>
+        <p>Fall 2022, Teaching Assistance of Computer Vision and Computer Graphics Workshop, HKMU</p>        
+        <p>Spring 2022 & Fall 2022, Teaching Assistance of CSIT 6000L Advanced Digital Design, HKUST</p>
+        <p>Spring 2022, Teaching Assistance of ISDN 5300 Advanced Digital Design, HKUST</p>
+        <p>Fall 2021, Teaching Assistance of COMP 4421 Image Processing,  HKUST</p>
+        <p>Fall 2020, Teaching Assistance of COMP 1022P Introduction to Computing with Java,  HKUST</p>
+        <p>Spring 2020, Teaching Assistance of COMP 3311 Database Management Systems,  HKUST</p>
+        <p>Fall 2019, Teaching Assistance of ISDN 2300 Digital Design, HKUST</p>
+    </div>
 
     <div class="sub-container">
         <h1>SKILLS</h1>
@@ -98,7 +110,7 @@
 
         <p>Overseas study experience sharing session at College of Computer Science and Technology | Organizer</p>
 
-        <p>Summer holiday in 2015, technical summer training camp ”Summer in Silicon Valley” at San Jose State University, California, USA | Team leader of students of college of computer science and technology in Zhejiang University </p>
+        <p>Summer in 2015, technical summer training camp "Summer in Silicon Valley" at San Jose State University, California, USA | Team leader of students of college of computer science and technology in Zhejiang University </p>
         &nbsp;&nbsp;&nbsp;&nbsp;<small>-I was the contact person to feed back my team’s situation to ZJU and SJSU in case of any emergency. Organize and arrange teammates for meeting, assembly on schedule. Arrangement of preparation before departure, experience share and report writing after return. I participates in the technological and commercial lectures, group projects, visits to companies and discussion and presentations for a specific topic. My team won the third prize in the final exhibition of achievement and presentation.</small><br>
 
         <p>September-November 2015, Nov. 20-12 2015 Digital Media Technology Open Day at Zhejiang University| Head of design and advertising department</p>
