--- a/cv_cys.html
+++ b/cv_cys.html
@@ -27,35 +27,85 @@
 
     <div class="sub-container">
         <h1>EDUCATION BACKGROUND</h1>
-        <p><strong>Bachelor of Engineer in Digital Media Technology, <br>Zhejiang University, Sept 2012 – June 2016</strong></p>
+        <p><strong>Bachelor of Engineering in Digital Media Technology, <br>Zhejiang University, Sept 2012 – June 2016</strong></p>
         <!--				<p>MAIN COURSES: Image Analysis & Artistic Process, Fundaments of Media Signal Processing, Computer Graphics, Fundamentals of Data Structures, Computer Vision, Digital Audio and Video Processing, Data Visualization and Cross-media, Artificial Intelligence, Human-computer Interaction, Animation Design, Computer Game Programming, Virtual Reality and Digital Entertainment, Drawing of Cartoon and Animation, Drama and Script Writing</p>-->
 
         <p><strong>Master of Science in Computer Science, <br>The University of Hong Kong, Sept 2016 – Jan 2018</strong></p>
         <!--				<p>MAIN COURSES: Multimedia Technologies, Smart phone apps development, Visualization and visual analytics, Data mining, Cluster and cloud computing, User interface design and development</p>-->
-        <p><strong>PhD in Computer Science and Engineering, <br>The Hong Kong University of Science and Technology, Sept 2019 – Now</strong></p>
+        <p><strong>PhD in Computer Science and Engineering, <br>The Hong Kong University of Science and Technology, Aug 2019 – Now</strong></p>
     </div>
 
     <div class="sub-container">
         <h1>EXPERIENCE</h1>
-<!--        <p>Summer 2015, Full-time consultant and assistant at Xinying Tutor Center | Study facilitation for high school students, assistance of oral English classes</p>-->
+        <p>April 2023 to now, research visiting student in University of South California,  ICT Vision and Graphics Lab (VGL)</p>
+        <p>August 2019 to now, PhD student in Department of Computer Science and Engineering, HKUST</p>
+        <p>2021 to 2022, PhD student in Thrust of Computational Media and Arts, HKUST (GZ)</p>
+        <p>July 2019 to August 2019, research assistant of Division of Integrative Systems and Design, HKUST</p>
+        <p>April 2018 to June 2019, analytics programmer in Aigens, F&B self-service kiosk company | client-end kiosk</p>
         <p>October 2017, Centre for Educational Leadership (CEL) Gansu Professional Training, Faculty of Education in HKU | Activity Helper and Cantonese-Putonghua Interpreter</p>
         &nbsp;&nbsp;&nbsp;&nbsp;<small>-Real-time interpreting Cantonese to Putonghua for teachers and headmasters from Gansu primary and middle schools. Help prepare for meetings, lectures, video shooting and picture taking.</small><br>
-        <p>April 2018 to June 2019, analytics programmer in Aigens, F&B self-service kiosk company | client-end kiosk</p>
-        <p>July 2019 to August 2019, research assistant of Division of Integrative Systems and Design, HKUST</p>
-        <p>August 2019 to now, PhD student in Department of Computer Science and Engineering, HKUST</p>
-<!--        <p>2021 to now, PhD student in Thrust of Computational Media and Arts, HKUST (GZ)</p>-->
+        <!--        <p>Summer 2015, Full-time consultant and assistant at Xinying Tutor Center | Study facilitation for high school students, assistance of oral English classes</p>-->
     </div>
+
+
     <div class="sub-container">
-        <h1>TEACHING SERVICES</h1> 
+        <h1>PUBLICATION</h1>
+        <strong>* equal contribution</strong>
+        <p> 10/2023  Huajian Huang, Yinzhe Xu, <b>Yingshu Chen</b> and Sai-Kit Yeung, 360VOT: A New Benchmark Dataset for Omnidirectional Visual Object Tracking, International Conference on Computer Vision (ICCV), 2023</p>
+        <p> 10/2023  Ziqiang Zheng, <b>Yingshu Chen</b>, Binh-Son Hua and Sai-Kit Yeung, CompUDA: Compositional Unsupervised Domain Adaptation for Semantic Segmentation under Adverse Conditions, IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2023</p>
+        <p> 10/2023  Ziqiang Zheng, <b>Yingshu Chen</b>, Binh-Son Hua, Yang Wu and Sai-Kit Yeung, Cross-Domain Autonomous Driving Perception using Contrastive Appearance Adaptation, IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2023</p>
+        <p> 06/2023  Tan-Sang Ha*, Ziqiang Zheng*, <b>Yingshu Chen</b>, Haixin Liang, Apple Pui-Yi Chui, Yue-Him Wong and Sai-Kit Yeung,  Marine Video Cloud: A Cloud-Based Video Analytics Platform for Collaborative Marine Research, OCEANS, 2023</p>
+        <p> 10/2022  Hong Wing Pang, <b>Yingshu Chen</b>, Phuoc-Hieu T. Le, Binh-Son Hua, Thanh Nguyen and  Sai-Kit Yeung, Neural Scene Decoration from a Single Photograph, European Conference on Computer Vision (ECCV), 2022. </p>
+        <p> 08/2022  <b>Yingshu Chen</b>, Tuan-Anh Vu, Ka-Chun Shum, Binh-Son Hua and Sai-Kit Yeung, Time-of-Day Neural Style Transfer for Architectural Photographs, The IEEE International Conference on Computational Photography (ICCP), 2022.</p>
+        <p> 03/2018  Ting Li, Liwen Feng, <b>Yingshu Chen</b> and Huagen Wan, An Approach to Free-Hand Interaction For 3D Scene Modeling, Transactions of Beijing Institute of Technology</p>
+        <p> 07/2017  Ting Li, Liwen Feng, <b>Yingshu Chen</b> and Huagen Wan, An Approach to Free-Hand Interaction For 3D Scene Modeling, the 13th China Human Computer Interaction Conference, 2017</p>
+        <p> 11/2015  Hu Beixin, <b>Yingshu Chen</b> and Yangye Wang, A Virtual Five String Piano on Fingers, 2015 Asian Conference on Design and Digital Engineering – No.64, Nov. 4th - 6th,2015, KICC, Kitakyushu, Fukuoka, Japan</p>
+    </div>
+
+    <div class="sub-container">
+        <h1>TEACHING SERVICES</h1>
         <!-- <p>, Teaching Assistance of ,  HKUST</p> -->
         <p>Spring 2023, Teaching Assistance of COMP 4021 Internet Computing, HKUST</p>
-        <p>Fall 2022, Teaching Assistance of Computer Vision and Computer Graphics Workshop, HKMU</p>        
+        <p>Fall 2022, Teaching Assistance of Computer Vision and Computer Graphics Workshop, Scientist-in-Residence Program, HKMU</p>
         <p>Spring 2022 & Fall 2022, Teaching Assistance of CSIT 6000L Advanced Digital Design, HKUST</p>
         <p>Spring 2022, Teaching Assistance of ISDN 5300 Advanced Digital Design, HKUST</p>
+        <p>Fall 2021, Teaching Assistance of ISDN6660A Integrative Systems and Design Seminar, HKUST</p>
         <p>Fall 2021, Teaching Assistance of COMP 4421 Image Processing,  HKUST</p>
         <p>Fall 2020, Teaching Assistance of COMP 1022P Introduction to Computing with Java,  HKUST</p>
         <p>Spring 2020, Teaching Assistance of COMP 3311 Database Management Systems,  HKUST</p>
-        <p>Fall 2019, Teaching Assistance of ISDN 2300 Digital Design, HKUST</p>
+        <p>Fall 2019 & Fall 2020, Teaching Assistance of ISDN 2300 Digital Design, HKUST</p>
+    </div>
+
+
+    <div class="sub-container">
+        <h1>PROJECTS / THESIS TOPICS</h1>
+
+        <p><a href="./ad-transfer" target="_blank">3D Advertisement Poster</a> (WebGL): A web-based demo for 3D advertisment display. </p>
+
+        <p><a href="https://github.com/chenyingshu/ThinkTypeSystem">Master Thesis Topic</a> (C++ and Qt): <a href="https://vimeo.com/243664058">Human Computer Interaction via Brainwave Control</a></p>
+        &nbsp;&nbsp;&nbsp;&nbsp;<small>-Study the effect of user interface (UI) elements and human-induced factors on electroencephalography (EEG) signals, proposing a brain-computer interface (BCI) typing system through EEG data retrieved from the wireless Emotiv neuroheadset. Mixing with UI factorial auxiliaries and the T9 keyboard layout, a new input UI was devised in terms of performance of the neuroheadset and input efficiency. Innovative ideas about enhancing training brainwave signals through visual, auditory and motional assistance were proposed. Research was made on possibility of convenient BCI applications through UI elements, anthropic assistance and extra functions auxiliaries based on consumer-EEG device, discovering connections between neural signals and human-induced effects.</small><br>
+
+        <p><a href="https://github.com/chenyingshu/MovieTrendFromDataVisualization">Movie Trend Visualization</a> – responsible for data collection, overall design, top movie visualization and analysis, webpage design.</p>
+
+        <p><a href="https://vimeo.com/194161874">Mobile Game APP Development</a> – responsible for algorithm refinement and UI design</p>
+
+        <p>Amazon Recommendation Cloud Computing in Spark – responsible for algorithms selection and realization</p>
+
+        <p><a href="https://vimeo.com/260713934">Bachelor Thesis Topic</a> (Unity with C#)</p>
+        &nbsp;&nbsp;&nbsp;&nbsp;<small>-Design and Method Study of Two-handed Natural Interactive Scene Modeling Applied on Virtual Reality </small><br>
+
+        <p>Game programming design – 3D virtual Unity game with Oculus | Scenes and characters 3D and 2D modelling, dubbing</p>
+
+        <p>Game programing design – Flash game / animation | Scenes and characters 3D and 2D modelling, code programing</p>
+
+        <p>Interactive game concept design including prototype | Charged in game layout design</p>
+        <!--        <p>The realization of images combination and mergence with wavelet transform in Matlab</p>-->
+        <!--        &nbsp;&nbsp;&nbsp;&nbsp;<small>-In Matlab, under wavelet transform theory, the combination of two images is realized, with different degrees of mergence through linear transform. Continuous displaying of images mergence in different levels comes to special effect of gradual change if two images, which could finally automatically produce animation without Matlab. Besides, some particular application designs are made followed this series of techniques above.</small><br>-->
+
+        <p>2014-2015 Zhejiang University Student Research Training Program (<a href="https://github.com/chenyingshu/Traveling-Website-SRTP">SRTP</a>) titled “Original design of websites with Interaction visualization” | Person in charge and team leader</p>
+        &nbsp;&nbsp;&nbsp;&nbsp;<small>-It is a one-year academic project for undergraduates. I held every team meetings and supervised the progress. We made periodical schemes and study schedules, determining project orientation.</small><br>
+
+
     </div>
 
     <div class="sub-container">
@@ -72,32 +122,6 @@
         <p>Free-hand sketch ability | Photographing and photographic editing ability</p>
     </div>
 
-
-    <div class="sub-container">
-        <h1>PROJECTS / THESIS TOPICS</h1>
-        <p>Interactive game concept design including prototype | Charged in game layout design</p>
-        <p>Game programing design – Flash game / animation | Scenes and characters 3D and 2D modelling, code programing</p>
-
-        <p>Game programming design – 3D virtual Unity game with Oculus | Scenes and characters 3D and 2D modelling, dubbing</p>
-
-<!--        <p>The realization of images combination and mergence with wavelet transform in Matlab</p>-->
-<!--        &nbsp;&nbsp;&nbsp;&nbsp;<small>-In Matlab, under wavelet transform theory, the combination of two images is realized, with different degrees of mergence through linear transform. Continuous displaying of images mergence in different levels comes to special effect of gradual change if two images, which could finally automatically produce animation without Matlab. Besides, some particular application designs are made followed this series of techniques above.</small><br>-->
-
-        <p><a href="https://vimeo.com/260713934">Bachelor Thesis Topic</a> (Unity with C#)</p>
-        &nbsp;&nbsp;&nbsp;&nbsp;<small>-Design and Method Study of Two-handed Natural Interactive Scene Modeling Applied on Virtual Reality </small><br>
-
-        <p>2014-2015 Zhejiang University Student Research Training Program (<a href="https://github.com/chenyingshu/Traveling-Website-SRTP">SRTP</a>) titled “Original design of websites with Interaction visualization” | Person in charge and team leader</p>
-        &nbsp;&nbsp;&nbsp;&nbsp;<small>-It is a one-year academic project for undergraduates. I held every team meetings and supervised the progress. We made periodical schemes and study schedules, determining project orientation.</small><br>
-
-        <p>Amazon Recommendation Cloud Computing in Spark – responsible for algorithms selection and realization</p>
-
-        <p><a href="https://vimeo.com/194161874">Mobile Game APP Development</a> – responsible for algorithm refinement and UI design</p>
-
-        <p><a href="https://github.com/chenyingshu/MovieTrendFromDataVisualization">Movie Trend Visualization</a> – responsible for data collection, overall design, top movie visualization and analysis, webpage design.</p>
-
-        <p><a href="https://github.com/chenyingshu/ThinkTypeSystem">Master Thesis Topic</a> (C++ and Qt): <a href="https://vimeo.com/243664058">Human Computer Interaction via Brainwave Control</a></p>
-        &nbsp;&nbsp;&nbsp;&nbsp;<small>-Study the effect of user interface (UI) elements and human-induced factors on electroencephalography (EEG) signals, proposing a brain-computer interface (BCI) typing system through EEG data retrieved from the wireless Emotiv neuroheadset. Mixing with UI factorial auxiliaries and the T9 keyboard layout, a new input UI was devised in terms of performance of the neuroheadset and input efficiency. Innovative ideas about enhancing training brainwave signals through visual, auditory and motional assistance were proposed. Research was made on possibility of convenient BCI applications through UI elements, anthropic assistance and extra functions auxiliaries based on consumer-EEG device, discovering connections between neural signals and human-induced effects.</small><br>
-    </div>
 
 
     <div class="sub-container">
@@ -127,21 +151,13 @@
 
     <div class="sub-container">
         <h1>HONORS AND AWARDS</h1>
-        <p> 2016/06	Oustanding Graduate in Zhejiang Province (Top 5%) &nbsp;&nbsp; Provincial </p>
-        <p>	2014/11	National Scholarship (Top 1%)        &nbsp;&nbsp;    National</p>
+        <p> 2023 Overseas Research Award, HKUST </p>
+        <p> 06/2016	Oustanding Graduate in Zhejiang Province (Top 5%) &nbsp;&nbsp; Provincial </p>
+        <p>	11/2014	National Scholarship (Top 1%)        &nbsp;&nbsp;    National</p>
         <p> 2009 National Olympiad in Informatics in Provinces(NOIP) Prize 1  &nbsp;&nbsp; National</p>
         <p> 2014 University Students Arts Festival in Zhejiang Province  &nbsp;&nbsp; 3rd Prize in Painting Group</p>
     </div>
 
-
-    <div class="sub-container">
-        <h1>PUBLICATION</h1>
-        <p>2022/10  Hong Wing Pang, Yingshu Chen, Phuoc-Hieu T. Le, Binh-Son Hua, Thanh Nguyen, Sai-Kit Yeung, Neural Scene Decoration from a Single Photograph, European Conference on Computer Vision (ECCV), 2022. </p>
-        <p>2022/08  Yingshu Chen, Tuan-Anh Vu, Ka-Chun Shum, Binh-Son Hua, Sai-Kit Yeung, Time-of-Day Neural Style Transfer for Architectural Photographs, The IEEE International Conference on Computational Photography (ICCP), 2022.</p>
-        <p>2018/3  Ting Li, Liwen Feng, Yingshu Chen and Huagen Wan, An Approach to Free-Hand Interaction For 3D Scene Modeling, Transactions of Beijing Institute of Technology</p>
-        <p>2017/7  Ting Li, Liwen Feng, Yingshu Chen and Huagen Wan, An Approach to Free-Hand Interaction For 3D Scene Modeling, the 13th China Human Computer Interaction Conference, 2017</p>
-        <p>2015/11  Hu Beixin, Yingshu Chen and Yangye Wang, A Virtual Five String Piano on Fingers, 2015 Asian Conference on Design and Digital Engineering – No.64, Nov. 4th - 6th,2015, KICC, Kitakyushu, Fukuoka, Japan</p>
-    </div>
 
     <div class="sub-container">
         <h1>HOBBIES</h1>
